vlib/v/checker/tests/option_fields_addr_err.out
vlib/v/checker/tests/option_fields_addr_err.vv:9:10: error: cannot take the address of an Option field
    7 | fn main() {
    8 |     x := Wrapper{}
    9 |     if _ := &x.value {
      |             ~~~~~~~~
   10 |     }
   11 |
vlib/v/checker/tests/option_fields_addr_err.vv:12:7: error: cannot take the address of an Option field
   10 |     }
   11 | 
   12 |     _ := &x.value
      |          ~~~~~~~~
   13 | }
