vlib/v/checker/tests/option_fields_addr_err.vv
module main

struct Wrapper {
	value ?u8
}

fn main() {
	x := Wrapper{}
	if _ := &x.value {
	}

	_ := &x.value
}
